set min height to prevent collapse on your bets container

--- a/bexh-web-app/src/app/pages/common/containers/Bets/style.scss
+++ b/bexh-web-app/src/app/pages/common/containers/Bets/style.scss
@@ -1,4 +1,4 @@
 .bets__tableContainer {
-    height: 85vh;
+    min-height: 85vh;
     max-width: 600px;
 }
